@@ -4,6 +4,9 @@ Changelog
 0.10.3 (unreleased)
 -------------------
 
+- Set ``use_vhm=False`` for ZAMQP Test Layer
+  [saily]
+
 - Added a configureable scheme, hostname and port keyword to be passed into
   fake request object in consumers. We well automatically rewrite those URLs
   using VirtualHostMonster.
